# QtMesonPluginsResourcesTest

./: meson.build  top.pro
app/: app.pro  main.cpp  meson.build  pluginloader.cpp  pluginloader.h
plugin1/: meson.build  plugin.cpp  plugin.h  plugin1.pro  resources1.qrc
plugin1/samples/: test.txt
plugin2/: meson.build  plugin.cpp  plugin.h  plugin.json  plugin2.pro  resources.qrc
plugin2/samples/: test2.txt
plugin3/: meson.build  plugin.cpp  plugin.h  plugin.json  plugin3.pro  resources3.qrc
plugin3/samples/: test3.txt
